flux/apps/base/uptimekuma/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptimekuma
  namespace: uptimekuma
  labels:
    app.kubernetes.io/name: uptimekuma
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: uptimekuma
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uptimekuma
    spec:
      containers:
        - name: uptimekuma
          image: "louislam/uptime-kuma:2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: uptimekuma-data
