flux/apps/base/uptimekuma/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptimekuma
  namespace: uptimekuma
  labels:
    app.kubernetes.io/name: uptimekuma
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: uptimekuma
