flux/apps/base/uptimekuma/Ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptimekuma
  namespace: uptimekuma
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/name: uptimekuma
spec:
  ingressClassName: nginx
  rules:
    - host: status.zshen.me
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: uptimekuma
                port:
                  number: 3001
  tls:
    - secretName: uptimekuma-tls
      hosts:
        - status.zshen.me
